--- a/rapport/tp2rapport.tex
+++ b/rapport/tp2rapport.tex
@@ -131,7 +131,7 @@
 
 \vspace{2cm}
 
-\textbf{Sujet proposé par : Monsieur Philipe Hensel} \\
+\textbf{Sujet proposé par : Monsieur Philippe Hensel} \\
 
 \vspace{1cm}
 
