build: some report corrections

--- a/rapport/rapportSAE5.ROM3.tex
+++ b/rapport/rapportSAE5.ROM3.tex
@@ -168,6 +168,23 @@ Une démonstration de l'application est disponible à l'adresse suivante : \url{
 
 \section{Diagrammes de séquence}
 
+\subsection{Connexion Client - Serveur}
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=1\textwidth]{images/serverclient.png}
+  \caption{Connexion Client - Serveur}
+\end{figure}
+
+
+\subsection{Connexion Peer-to-Peer entre deux clients}
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=1\textwidth]{images/peertopeer.png}
+  \caption{Connexion Peer-to-Peer entre deux clients}
+\end{figure}
+
+
+
 \subsection{Connexion à la salle de réunion}
 
 \begin{sequencediagram}
